genex: Fix erroneous handling of recursion for $<GENEX_EVAL:>

Fixes: #18894